fix main-menu to bottom right, and dock player to the top on mobile

--- a/app/styles/base/_button.scss
+++ b/app/styles/base/_button.scss
@@ -277,7 +277,7 @@
 
 .Btn--navigationToggle {
 	position: fixed;
-	top: 1rem;
+	bottom: 1rem;
 	left: 1rem;
 	z-index: 7;
 
