--- a/app/styles/components/_aside.scss
+++ b/app/styles/components/_aside.scss
@@ -36,6 +36,20 @@
 	.Root.is-minimized & {
 		width: auto;
 		height: auto;
+		position: sticky;
+		margin-top: 0.1rem;
+		order: 0;
+		top: 0;
+		right: 0;
+		left: 0;
+
+		@media (min-width: $layout-xl) {
+			position: fixed;
+			right: 0;
+			bottom: 0;
+			top: auto;
+			left: auto;
+		}
 	}
 	.Root.is-maximized & {
 		// above menu
