--- a/app/styles/components/_input-autocomplete.scss
+++ b/app/styles/components/_input-autocomplete.scss
@@ -1,7 +1,7 @@
 .InputAutocomplete {
 	position: fixed;
 	z-index: 7;
-	top: 4.1rem;
+	bottom: 3.5rem;
 	left: 1rem;
 }
 
@@ -55,6 +55,8 @@
 
 .aa-dropdown-menu {
 	margin-top: -1px;
+	bottom: 100%;
+	top: auto !important;
 	width: 100%;
 	background-color: $superlightgray;
 	box-shadow: $box-shadow-large;
